updates to the game text

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 h1{
   font-style: italic;
-  text-decoration: underline;
 }
 h1, h2{
   text-align: center;
@@ -69,7 +68,7 @@ ul{
 #message{
   padding-top: 40px;
   font-size: 50px;
-  color:
+  color: orange;
 }
 #resetB{
   clearBox();
